--- a/templates/index.html
+++ b/templates/index.html
@@ -3,20 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <title>index</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-<div class="container">
+<div class="my-container">
     <div class="table-wrapper">
-        <div class="table-title">Курсы валют :</div>
+        <div class="table-title">Курсы валют на: {{ DATE }}</div>
         <div class="table-container">
-            {{ table | safe }}
+            <table>
+                {% for cur in CURRENCY %}
+                <tr>
+                    {% if cur['Cur_Abbreviation'] in ['RUB', 'USD', 'EUR', 'CNY'] %}
+                    <td>{{ cur['Cur_Name'] }}</td>
+                    <td>{{ cur['Cur_OfficialRate'] }}</td>
+                    {% endif %}
+                </tr>
+                {% endfor %}
+            </table>
+        </div>
+        <div>
+            <p></p>
+            <p style="text-align: center;">Введите дату от 01.07.2016 до сегодня</p>
+        </div>
+        <div class="table-form">
+            <form action="/" method="post">
+                <div class="col">
+                    <input type="text" class="form-control" placeholder="день" name="DAY">
+                </div>
+                <div class="col">
+                    <input type="text" class="form-control" placeholder="месяц" name="MONTH">
+                </div>
+                <div class="col">
+                    <input type="text" class="form-control" placeholder="год" name="YEAR">
+                </div>
+                <button type="submit" class="btn btn-dark" style="color: #607d8b">Отправить</button>
+            </form>
+            <p></p>
+        <div class="d-grid gap-2">
+            <button class="btn btn-dark" style="color: #607d8b" onclick="window.location.href='/reset'">
+                Текущий курс валют
+            </button>
+        </div>
+        </div>
+        <div>
+            <p></p>
+            <h5 style="color: red; text-align: center;">
+                {% if ERROR %}
+                    {{ ERROR }}
+                {% endif %}
+            </h5>
         </div>
     </div>
 </div>
 <div class="films-container">
     <ul class="films-list">
-      {% for film in films %}
+      {% for film in FILMS %}
         <li class="film">
             <a href="{{ film.url }}"><img src="{{ film.image }}"></a>
             <a href="{{ film.url }}">{{ film.title }}</a>
@@ -24,5 +66,6 @@
       {% endfor %}
     </ul>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
