--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>index</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
 </head>
 <body>
 <div class="my-container">
@@ -27,7 +27,7 @@
             <p style="text-align: center;">Введите дату от 01.07.2016 до сегодня</p>
         </div>
         <div class="table-form">
-            <form action="/" method="post">
+            <form action="/" method="post" id="myForm">
                 <div class="col">
                     <input type="text" class="form-control" placeholder="день" name="DAY">
                 </div>
@@ -48,14 +48,16 @@
         </div>
         <div>
             <p></p>
-            <h5 style="color: red; text-align: center;">
-                {% if ERROR %}
-                    {{ ERROR }}
-                {% endif %}
-            </h5>
+            <div id="error" class="error">
+                {{ ERROR or "" }}
+            </div>
         </div>
     </div>
+    <div class="authorization">
+        Второй контейнер
+    </div>
 </div>
+<p></p>
 <div class="films-container">
     <ul class="films-list">
       {% for film in FILMS %}
@@ -66,6 +68,6 @@
       {% endfor %}
     </ul>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
