--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
             </div>
         {% else %}
             <p></p>
-            <p style="text-align: center">Авторизуйтесь для работы с формой валюты!!!</p>
+            <p style="text-align: center; color: #bf0e0e; height: 114px;">Авторизуйтесь для работы с формой валюты!!!</p>
         {% endif %}
         <div>
             <div class="error">
@@ -58,7 +58,7 @@
         </div>
     </div>
     <div class="table-form">
-        <div class="error">
+        <div class="log_in">
             {% if USERNAME %}
                 {{ USERNAME }} <a href="/logout">Выйти</a>
             {% endif %}
@@ -89,7 +89,6 @@
         </div>
     </div>
 </div>
-<p></p>
 <div class="films-container">
     <ul class="films-list">
       {% for film in FILMS[:9] %}
