--- a/templates/test.html
+++ b/templates/test.html
@@ -11,7 +11,7 @@
         <div class="col">
             <input type="text" class="form-control width=200px" style="width: 300px;" placeholder="Город" name="city">
         </div>
-        <button type="submit" class="btn btn-dark" style="color: #607d8b; width: 140px;">Отправить</button>
+        <input type="submit" class="btn btn-dark" value="test">
     </form>
     {% if CITY is mapping and CITY %}
         {% for key, value in CITY.items() %}
