--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -60,6 +60,9 @@ a {
 
 .weather-table {
     width: 403.34px;
+}
+
+.weather-background-image {
 /*    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
