--- a/templates/index.html
+++ b/templates/index.html
@@ -184,6 +184,7 @@
                 </div>
             </div>
             <table class="table table-dark weather-table">
+                {% if WEATHER %}
                 <tr>
                   <td>{{ WEATHER['temperature']['description'] }}</td>
                   <td style="width: 70px; padding: 0;">
@@ -238,6 +239,11 @@
                       {{ WEATHER['precipitation']['value'] }}
                   </td>
                 </tr>
+                {% else %}
+                <tr>
+                  <td>Нет данных</td>
+                </tr>
+                {% endif %}
             </table>
         </div>
         {% if USERNAME %}
