--- a/templates/index.html
+++ b/templates/index.html
@@ -188,7 +188,7 @@
                 </div>
             </div>
             <table class="table table-dark weather-table">
-                {{ WEATHER }}
+<!--                {{ WEATHER }}-->
                 {% if WEATHER %}
                 <tr>
                   <td>{{ WEATHER['temperature']['description'] }}</td>
